<resources>
    <string name="app_name">GameMemo</string>
    <string name="setup_game">Setup game</string>
    <string name="game_list_empty">Your games will be saved here</string>
    <string name="delete_game">Delete</string>
    <string name="menu_info_game">Info</string>
    <string name="game_starttime">Starttime</string>
    <string name="game_runtime">Duration</string>
    <string name="game_team_X">Team %1$d</string>
    <string name="tichu_no_rounds">1. Press bubbles for tichu bids.\n2. Select the player that finished first.\n3. Enter the card score.</string>
    <string name="doppelkopf_no_rounds">Click on the re player(s)!</string>
    <string name="default_tichu_round_score"> </string>
<string name="default_player_name">Player</string>
    <string name="game_setup_select_player">Select player</string>
    <string name="game_setup_general_player_list">Players</string>
    <string name="game_setup_shuffle">Shuffle</string>
    <string name="game_enter_name">Enter name</string>
    <string name="game_setup_start">Start %1$s</string>
    <string name="select_player">Select player</string>
    <string name="tichu_game_tichu_button_1_content_description">Toggle tichu bid player 1</string>
    <string name="tichu_game_tichu_button_2_content_description">Toggle tichu bid player 2</string>
    <string name="tichu_game_tichu_button_3_content_description">Toggle tichu bid player 3</string>
    <string name="tichu_game_tichu_button_4_content_description">Toggle tichu bid player 4</string>
    <string name="tichu_game_tichu_round_bid_image_content_description">Visualizes tichu bid for player</string>
    <string name="game_failed_loading">Failed loading game.</string>
	<string name="data_exchange_button_refresh_devices_list">Scan</string>
	<string name="data_exchange_connection_status_none">State: Idle</string>
	<string name="data_exchange_connection_status_listen">State: Waiting</string>
	<string name="data_exchange_connection_status_connecting">State: Connecting</string>
	<string name="data_exchange_connection_status_connected">State: Connected</string>
	<string name="data_exchange_connected_to">Connected to %1$s</string>
	<string name="data_exchange_status_synchronizing_failed">Failed</string>
	<plurals
        name="data_exchange_finished">
        <item quantity="one">Synced %1$d game with %2$s</item>
        <item quantity="other">Synced %1$d games with %2$s</item>
    </plurals>
	<string name="data_exchange_bluetooth_no_devices">No devices</string>
	<string name="bluetooth_unable_to_connect">Unable to connect to device</string>
	<string name="data_exchange_bluetooth_not_enabled_leaving">Bluetooth is required</string>
	<string name="bluetooth_not_available">Bluetooth is not available</string>
	<string name="bluetooth_permission_required">Bluetooth permission required</string>
	<string name="data_exchange_bluetooth_button_ensure_discoverable">Ensure discoverable</string>
	<string name="data_exchange_bluetooth_make_discoverable_on_start">Start discoverable</string>
	<string name="data_exchange_filewriter_failed">Export failed</string>
	<plurals
        name="import_success">
        <item quantity="zero">Failed importing</item>
        <item quantity="one">Successfully imported %1$d game</item>
        <item quantity="other">Successfully imported %1$d games</item>
    </plurals>
	<string name="open_data_exchanger">Share </string>
	<string name="open_data_exchanger_bluetooth">Sync via bluetooth</string>
	<string name="confirm_delete">Confirm delete</string>
	<plurals name="confirm_delete_games">
        <item quantity="one">Delete this game?</item>
        <item quantity="other">Delete these %1$d games?</item>
    </plurals>
	<string name="data_exchange_games_received">Received %1$d</string>
	<string name="data_exchange_games_sent">Sent %1$d</string>
	<string name="bluetooth_devices_state_bonded">Bonded</string>
	<string name="bluetooth_confirm_turn_off_title">Turn off bluetooth?</string>
	<string name="bluetooth_leave_enabled">No</string>
	<string name="unfinished_game_found_title">Continue unfinished game?</string>
	<string name="unfinished_game_found_but_start_new">Start new</string>
	<string name="rename_player">Rename player</string>
	<string name="single_rename_in_games_all">in all %1$s games</string>
    <string name="rename_in_games">in %1$d games</string>
	<plurals
        name="single_rename_in_games_count">
        <item quantity="one">in one %2$s game</item>
        <item quantity="other">in %1$d %2$s games</item>
    </plurals>
	<string name="hint_new_player_name">New player name</string>
	<plurals
	     name="rename_conflict_title">
        <item quantity="one">Name in use</item>
        <item quantity="other">Name used by %1$d games</item>
    </plurals>
	<string name="rename_conflict">Merge %1$s and %2$s to %3$s? Can invalidate save games!</string>
	<string name="rename_success">Renaming successful</string>
	<string name="rename_failure">Renaming failed</string>
	<string name="rename_no_players">Nobody to rename</string>
	<string name="help">Help</string>
	<string name="about">About GameMemo</string>
	<string name="about_summary">GameMemo version %1$s Daniel Dittmar dans.ditt@gmail.com</string>
	<string name="statistics_sort_by_percentage">Sort by percentage</string>
	<string name="statistics_sort_by_value">Sort by value</string>
	<string name="statistics_only_show_significant">Only show significant</string>
	<string name="tichu_game_mery_rule">Mercy rule</string>
	<string name="tichu_game_mery_rule_short">mercy</string>
	<string name="game_detail_option_show_delta">Show delta</string>
	<string name="tichu_game_score_limit_with_value">Score limit: %1$d</string>
	<string name="tichu_game_score_limit">Score limit</string>
	<string name="tichu_game_score_limit_short">limit</string>
	<string name="game_winner">Winner</string>
	<string name="game_origin">Origin</string>
	<string name="tichu_game_state_add_round">Add round</string>
	<string name="tichu_game_state_new_round">New round</string>
	<string name="tichu_game_state_old_round_edited">Save round</string>
	<string name="tichu_game_state_rematch">Rematch</string>
	<string name="tichu_game_state_expect_data">Enter new round</string>
	<string name="tichu_game_enter_hand_score">Score</string>
	<string name="tichu_game_lock_button_content_description">Start new round, edit selected or leave finished game.</string>
	<string name="game_setup_reset">Reset</string>
	<string name="game_setup_options">Options</string>
	<string name="game_setup_options_show">Show options</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="games_selected_single">%1$s selected</string>
	<string name="games_selected">Games selected %1$d/%2$d</string>
	<string name="games_selected_all">All games selected</string>
	<string name="games_selection_title">Games to exchange</string>
	<string name="share">Share</string>
	<string name="save_to_sd_path">Save to %1$s</string>
	<string name="save_to_sd_path_done">Saved as %1$s</string>
	<string name="save_to_sd_path_failed">Failed saving</string>
	<string name="share_subject">GameMemo savegames</string>
	<string name="share_text">Savegames for the app GameMemo. Save the file and import desired games by a click.</string>
	<string name="share_accept">Accept</string>
	<string name="share_accept_and_close">Accept and close</string>
	<string name="share_no_data">Nothing to share</string>
	<string name="team_default_name">Team %1$d</string>
	<string name="player_dummy_name">Player %1$d</string>
	<string name="player_dummy_name_regex">(?:Spieler ([0-9]+))|(?:Player ([0-9]+))</string>
	<string name="color">Color</string>
	<string name="choose_color">Choose color</string>
	<string name="game_setup_new_team">New team</string>
	<string name="doppelkopf_option_cycles">Cycles</string>
	<string name="doppelkopf_option_cycles_with_value">Cycles: %1$d</string>
	<string name="doppelkopf_option_cycles_no_limit">Infinite rounds</string>
	<string name="doppelkopf_option_duty_soli">Duty soli</string>
	<string name="doppelkopf_option_duty_soli_with_value">Duty soli: %1$d</string>
	<string name="doppelkopf_team_name">Players</string>
	<string name="doppelkopf_re_party">Re</string>
	<string name="doppelkopf_contra_party">Contra</string>
	<string name="doppelkopf_extra_descr">Extras</string>
	<string name="doppelkopf_extra_fox">Fox %1$d/%2$d</string>
	<string name="doppelkopf_extra_charly">Charly %1$d/%2$d</string>
	<string name="doppelkopf_extra_doppelkopf">DK %1$d/%2$d</string>
	<string name="doppelkopf_bid_no_bid">No bid</string>
	<string name="doppelkopf_bid_re">Re!</string>
	<string name="doppelkopf_bid_contra">Contra!</string>
	<string name="doppelkopf_bid_ohne_90">No 90!</string>
	<string name="doppelkopf_bid_ohne_60">No 60!</string>
	<string name="doppelkopf_bid_ohne_30">No 30!</string>
	<string name="doppelkopf_bid_black">Black!</string>
	<string name="doppelkopf_result_descr">Result</string>
	<string name="doppelkopf_result_black">None</string>
	<string name="doppelkopf_result_0_29">0&#8211;29</string>
	<string name="doppelkopf_result_30_59">30&#8211;59</string>
	<string name="doppelkopf_result_60_89">60&#8211;89</string>
	<string name="doppelkopf_result_90_119">90&#8211;119</string>
	<string name="doppelkopf_result_120">120</string>
	<string name="doppelkopf_result_121_150">121&#8211;150</string>
	<string name="doppelkopf_result_151_180">151&#8211;180</string>
	<string name="doppelkopf_result_181_210">181&#8211;210</string>
	<string name="doppelkopf_result_211_240">211&#8211;240</string>
	<string name="doppelkopf_result_white">All</string>
	<string name="doppelkopf_game_style_normal">Normal</string>
	<string name="doppelkopf_game_style_hochzeit">Wedding</string>
	<string name="doppelkopf_game_style_armut">Poverty</string>
	<string name="doppelkopf_game_style_fleischloser">fleshless</string>
	<string name="doppelkopf_game_style_buben_solo">Jack solo</string>
	<string name="doppelkopf_game_style_damen_solo">Queen solo</string>
	<string name="doppelkopf_game_style_farb_solo">color solo</string>
	<string name="doppelkopf_game_style_stille_hochzeit">silent solo</string>
	<string name="doppelkopf_remaining_soli_info">Duty soli %1$d/%2$d</string>
	<string name="doppelkopf_game_state_add_round">Add round</string>
	<string name="doppelkopf_game_state_new_round">New round</string>
	<string name="doppelkopf_game_state_old_round_edited">Save round</string>
	<string name="doppelkopf_game_state_expect_data">Enter new round</string>
	<string name="doppelkopf_duty_soli_per_player">Duty soli per player: %1$d</string>
	<string name="doppelkopf_round_limit">Round limit: %1$d</string>
	<string name="doppelkopf_overview_info_heading">Options: </string>
	<string name="game_chooser_game_descr">%1$s games: %2$d</string>
	<string name="game_chooser_game_descr_no_count">%1$s</string>
	<string name="menu_game_info">Info</string>
	<string name="select_rule_system">Select rule system</string>
	<string name="doppelkopf_rule_system_info">Rule system: %1$s</string>
	<string name="doppelkopf_rule_system_descr_tournament1">Orientated at the official tournament rules.</string>
	<string name="doppelkopf_rule_system_descr_ka1">Modified tournament1: Re/Contra +1, duty soli after rounds, ends after x rounds not matches</string>
	<string name="lock_game">Lock game</string>
	<string name="unlock_game">Unlock game</string>
	<string name="statistics_show_chart_all_games">Calculate for all games</string>
	<string name="statistics_smoothing_none">No smoothing</string>
	<string name="statistics_smoothing_extreme">Extreme smooth</string>
	<string name="statistics_chrono_settings_single_values">Single values</string>
	<string name="statistics_chrono_settings_summed_values">Summed values</string>
	<string name="minigolf_lane_name">Lane name</string>
	<string name="minigolf_lane_descr">Hints and description</string>
	<string name="delete">Delete</string>
</resources>