<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/delete" android:title="@string/delete_game" android:icon="@drawable/ic_menu_delete" android:visible="false" android:showAsAction="ifRoom"></item><item
        android:id="@+id/setup_game"
        android:showAsAction="ifRoom"
        android:title="@string/setup_game" android:icon="@drawable/ic_menu_add">
    </item>

    <item android:id="@+id/open_data_exchanger_bluetooth" 
		 android:showAsAction="ifRoom" android:title="@string/open_data_exchanger_bluetooth" android:icon="@drawable/bluetooth"></item>
    <item android:id="@+id/share" 
		 android:showAsAction="always" android:title="@string/share" android:icon="@drawable/ic_menu_share" ></item>
    <item
        android:id="@+id/rename_player"
        android:showAsAction="never"
        android:title="@string/rename_player">
    </item>    
    <item
        android:id="@+id/select_rule_system"
        android:showAsAction="never"
        android:title="@string/select_rule_system"
        android:icon="@drawable/ic_menu_manage"></item>  
</menu>
