<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tichu_detail_base_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tichu_game_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tichu_game_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:gravity="center_horizontal"
            android:layout_below="@id/tichu_game_info"
            android:text="@string/tichu_game_state_expect_data" />
        
        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tichu_game_status"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/scoreTeam1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:hint="@string/tichu_game_enter_hand_score"
                android:imeOptions="actionDone"
                android:inputType="numberSigned" >
            </EditText>

            <ImageButton
                android:id="@+id/tichu_game_lockin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/tichu_button"
                android:contentDescription="@string/tichu_game_lock_button_content_description" />

            <EditText
                android:id="@+id/scoreTeam2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/tichu_game_enter_hand_score"
                android:imeOptions="actionDone"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout2">

            <Button
                android:id="@+id/tichu_game_player1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tichu_button"
                android:lines="1"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/default_player_name"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/tichu_game_player2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tichu_button"
                android:lines="1"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/default_player_name"
                android:textColor="@android:color/black" />

            <View
       			android:layout_width="@dimen/tichu_detail_separator_line_width"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/tichu_game_player3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tichu_button"
                android:lines="1"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/default_player_name"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/tichu_game_player4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tichu_button"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scrollHorizontally="true"
                android:text="@string/default_player_name"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tichu_bid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout3" >

            <ImageButton
                android:id="@+id/tichu1"
                android:layout_width="0dp"
                android:layout_height="@dimen/tichu_image_for_toggle_max_height"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/tichu_game_tichu_button_1_content_description"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/tichu2"
                android:layout_width="0dp"
                android:layout_height="@dimen/tichu_image_for_toggle_max_height"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/tichu_game_tichu_button_2_content_description"
                android:scaleType="centerInside" />

            <View
        		android:layout_width="@dimen/tichu_detail_separator_line_width"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <ImageButton
                android:id="@+id/tichu3"
                android:layout_width="0dp"
                android:layout_height="@dimen/tichu_image_for_toggle_max_height"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/tichu_game_tichu_button_3_content_description"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/tichu4"
                android:layout_width="0dp"
                android:layout_height="@dimen/tichu_image_for_toggle_max_height"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/tichu_game_tichu_button_4_content_description"
                android:scaleType="centerInside" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/roundsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:cacheColorHint="#00000000"
            android:transcriptMode="normal" 
            android:choiceMode="singleChoice"
            android:dividerHeight="2dp"
            android:listSelector="@drawable/tichu_list_selector">
        </ListView>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tichu_no_rounds" />
    </LinearLayout>

</LinearLayout>